--- a/views/personMaintenance.html
+++ b/views/personMaintenance.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="/public/vendors/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/public/vendors/nprogress/nprogress.css">
     <link rel="stylesheet" href="../public/css/admin.css">
-    <link rel="stylesheet" href="/public/css/tripRecord/levelMaintenance.css">
+    <link rel="stylesheet" href="/public/css/tripRecord/personMaintenance.css">
     <link rel="stylesheet" href="/public/css/load/load.css">
     <script src="../public/vendors/nprogress/nprogress.js"></script>
 </head>
 <body>
 <script>NProgress.start()</script>
-<div class="levelMaintenance main">
+<div class="personMaintenance main">
     <nav class="navbar">
         <button class="btn btn-default navbar-btn fa fa-bars"></button>
         <ul class="nav navbar-nav navbar-right">
@@ -25,43 +25,68 @@
         <div class="page-title">
             <h1>个人信息维护</h1>
         </div>
-        <ul class="nav nav-tabs cost-tabs" role="tablist">
-            <li role="presentation" class="active cost_list_li"><a href="#cost_modify" id="cost-list" data-toggle="tab">人员修改</a>
+        <ul class="nav nav-tabs personMaintenance-tabs" role="tablist">
+            <li role="presentation" class="active person_maintenance_li"><a href="#personMaintenance_modify" id="personMaintenance-list" data-toggle="tab">人员修改</a>
             </li>
-            <li role="presentation" class="cost_modify_li"><a href="#cost_add" id="cost-modify" data-toggle="tab">人员添加</a></li>
+            <li role="presentation" class="person_add_li"><a href="#personMaintenance_add" id="personMaintenance-modify" data-toggle="tab">人员添加</a></li>
         </ul>
-        <div class="tab-content cost-content">
-            <div class="tab-pane" id="cost_modify">
+        <div class="tab-content personMaintenance-content">
+            <div class="tab-pane personMaintenance_show active" id="personMaintenance_modify">
                 <div style="background:#ffffff;" class="clearfix">
                     <div class="search_text_div clearfix">
-                        <span class="text-content">职位类型代码：</span>
-                        <input type="number" class="search_text cost_type_code_view">
+                        <span class="text-content">请输入登录账号：</span>
+                        <input type="email" placeholder="邮箱账号" class="search_text account" readonly>
+                    </div>
+                    <div class="search_text_div clearfix">
+                        <span class="text-content">请输入原始密码：</span>
+                        <input type="password"  placeholder="原始密码" autocomplete='new-password' class="search_text old_pwd">
                         <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                     </div>
                     <div class="search_text_div clearfix">
-                        <sapn class="text-content">职位类型描述：</sapn>
-                        <input type="text" class="search_text cost_type_desc_view">
+                        <span class="text-content">请输入要修改的密码：</span>
+                        <input type="password" placeholder="修改密码" class="search_text modify_pwd">
                         <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                     </div>
+                    <div class="search_text_div clearfix">
+                        <span class="text-content">请再次输入密码：</span>
+                        <input type="password" placeholder="确认密码" class="search_text comfirm_pwd">
+                        <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
+                    </div>
+                    <div class="search_text_div clearfix">
+                        <span class="text-content">请输入昵称：</span>
+                        <input type="text" placeholder="昵称" class="nick_name" class="search_text personMaintenance_type_code_view">
+                    </div>
+                    <div class="search_text_div clearfix">
+                        <sapn class="text-content">职位类型：</sapn>
+                        <input type="text" class="search_text" id="level_type_desc_view"  readonly="readonly">
+                        <input type="hidden" id="level_type_code_view" readonly="readonly">
+                        <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
+                                data-target="#modal_tree" onclick="showModal('ZJ')"></button>
+                        <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
+                    </div>
+                    <div class="search_text_div clearfix">
+                        <span class="text-content">上传头像：</span>
+                        <input type="file">
+                    </div>
                     <div class="btn_group">
-                        <button type="button" class="btn btn-info">新增</button>
+                        <button type="button" class="btn btn-info btn_modify" disabled>修改</button>
                     </div>
                 </div>
             </div>
-            <div class="tab-pane" id="cost_add">
+            <div class="tab-pane personMaintenance_show" id="personMaintenance_add">
                 <div style="background:#ffffff;" class="clearfix">
                     <div class="search_text_div clearfix">
                         <span class="text-content">职位类型代码：</span>
-                        <input type="number" class="search_text cost_type_code_view">
+                        <input type="number" class="search_text personMaintenance_type_code_view">
                         <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                     </div>
                     <div class="search_text_div clearfix">
                         <sapn class="text-content">职位类型描述：</sapn>
-                        <input type="text" class="search_text cost_type_desc_view">
+                        <input type="text" class="search_text personMaintenance_type_desc_view">
                         <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                     </div>
                     <div class="btn_group">
-                        <button type="button" class="btn btn-info" id="cost-standard-add">新增</button>
+                        <button type="button" class="btn btn-info btn_show" id="personMaintenance-standard-add">新增</button>
                     </div>
                 </div>
             </div>
@@ -75,11 +100,11 @@
         <ul class="nav">
         </ul>
     </div>
-    <div class="mask">
+    <div class="mask" style="display: none">
         <span class="glyphicon glyphicon-refresh loading"></span>
     </div>
     <!-- Modal -->
-    <div class="modal fade cost-manger-tree" id="modal_tree" tabindex="-1">
+    <div class="modal fade level-manger-tree" id="modal_tree" tabindex="-1">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -98,30 +123,14 @@
     <script src="/node_modules/art-template/lib/template-web.js"></script>
     <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="/public/vendors/util/utils.js"></script>
-    <script src="/public/js/bussnessTrip/levelMaintenance.js"></script>
+    <script src="/public/js/bussnessTrip/personMaintenance.js"></script>
     <script type="text/javascript" id="template">{{dataJson}}</script>
-    <script type="text/art-template" id="costsList">
-        <% if(costTypeJsonArray) {%>
-            <% for(var i = 0;i<costTypeJsonArray.length ;i++){ %>
-                <tr>
-                    <td class="text-center"><%= costTypeJsonArray[i].costTypeCode %></td>
-                    <td class="text-center"><%= costTypeJsonArray[i].costTypeDesc %></td>
-                    <td class="text-center">
-                        <a href="javascript:;" class="btn btn-default btn-xs cost_type_edit"
-                           data-code="<%= costTypeJsonArray[i].costTypeCode %>@<%= costTypeJsonArray[i].costTypeDesc %>">编辑</a>
-                        <a href="javascript:;" class="btn btn-danger btn-xs cost_type_delete"
-                           data-code="<%= costTypeJsonArray[i].costTypeCode %>">删除</a>
-                    </td>
-                </tr>
-                <% } %>
-            <% } %>
-    </script>
     <script type="text/art-template" id="typeList">
         <% if(returnData){ %>
         <% for(var i = 0;i<returnData.length ;i++){ %>
             <li class="type-item" data-cost-code="<%=  returnData[i].code %>" onclick="showInfo('<%= returnData[i].queryType %>',this)"><%= returnData[i].descr %></li>
-        <% } %>
-        <% } %>
+            <% } %>
+            <% } %>
     </script>
     <script>NProgress.done()</script>
 </body>
