--- a/views/personMaintenance.html
+++ b/views/personMaintenance.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="search_text_div clearfix">
                         <span class="text-content">请输入昵称：</span>
-                        <input type="text" placeholder="昵称" class="nick_name" class="search_text personMaintenance_type_code_view">
+                        <input type="text" placeholder="昵称" class="search_text nick_name">
                     </div>
                     <div class="search_text_div clearfix">
                         <sapn class="text-content">职位类型：</sapn>
