--- a/views/personMaintenance.html
+++ b/views/personMaintenance.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="search_text_div clearfix">
                         <span class="text-content">请再次输入密码：</span>
-                        <input type="password" placeholder="确认密码" class="search_text comfirm_pwd">
+                        <input type="password" placeholder="确认密码" class="search_text confirm_pwd">
                         <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                     </div>
                     <div class="search_text_div clearfix">
@@ -66,10 +66,10 @@
                     </div>
                     <div class="search_text_div clearfix">
                         <span class="text-content">上传头像：</span>
-                        <input type="file">
+                        <input type="file" class="actorInputFile">
                     </div>
                     <div class="btn_group">
-                        <button type="button" class="btn btn-info btn_modify" disabled>修改</button>
+                        <button type="button" class="btn btn-info btn_modify">修改</button>
                     </div>
                 </div>
             </div>
