--- a/views/personMaintenance.html
+++ b/views/personMaintenance.html
@@ -64,9 +64,10 @@
                                 data-target="#modal_tree" onclick="showModal('ZJ')"></button>
                         <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                     </div>
-                    <div class="search_text_div clearfix">
+                    <div class="search_text_div clearfix avatar_content">
                         <span class="text-content">上传头像：</span>
                         <input type="file" class="actorInputFile">
+                        <img class="avatar_read" src="/public/img/default.png">
                     </div>
                     <div class="btn_group">
                         <button type="button" class="btn btn-info btn_modify">修改</button>
