--- a/public/css/tripRecord/personMaintenance.less
+++ b/public/css/tripRecord/personMaintenance.less
@@ -95,4 +95,20 @@
       }
     }
   }
+  .avatar_content{
+    span{
+      line-height: 80px;
+    }
+    .actorInputFile{
+      display: inline-block;
+      width: 180px;
+    }
+  }
+  .avatar_read {
+    width: 80px;
+    height: 80px;
+    border: 3px solid rgba(255, 255, 255, .3);
+    border-radius: 50%;
+    object-fit: cover;
+  }
 }
