--- a/views/levelMaintenance.html
+++ b/views/levelMaintenance.html
@@ -16,6 +16,7 @@
 <div class="levelMaintenance main">
     <nav class="navbar">
         <button class="btn btn-default navbar-btn fa fa-bars"></button>
+        <span class="home-page glyphicon glyphicon-home" onclick="utils.setHomePage('{{url}}')" style="cursor: pointer"></span>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="/baixiu/personMaintenance"><i class="fa fa-user"></i>个人中心</a></li>
             <li><a href="/baixiu/loginout"><i class="fa fa-sign-out"></i>退出</a></li>
