--- a/views/companyMaintenance.html
+++ b/views/companyMaintenance.html
@@ -16,6 +16,7 @@
 <div class="companyMaintenance main">
     <nav class="navbar">
         <button class="btn btn-default navbar-btn fa fa-bars"></button>
+        <span class="home-page glyphicon glyphicon-home" onclick="utils.setHomePage('{{url}}')" style="cursor: pointer"></span>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="/baixiu/personMaintenance"><i class="fa fa-user"></i>个人中心</a></li>
             <li><a href="/baixiu/loginout"><i class="fa fa-sign-out"></i>退出</a></li>
@@ -119,6 +120,7 @@
     <script src="/public/vendors/util/utils.js"></script>
     <script src="/public/js/bussnessTrip/companyMaintenance.js"></script>
     <script type="text/javascript" id="template">{{dataJsonArr}}</script>
+    <script type="text/javascript" id="template_url">{{url}}</script>
     <script type="text/art-template" id="costsList">
         <% if(costTypeJsonArray) {%>
             <% for(var i = 0;i<costTypeJsonArray.length ;i++){ %>
