--- a/public/css/tripRecord/bxManger.less
+++ b/public/css/tripRecord/bxManger.less
@@ -8,12 +8,12 @@
     }
   }
   .order-content {
-    .search_text_div{
+    .search_text_div {
       background: #ffffff;
       line-height: 25px;
-      padding:20px 0 20px 0;
+      padding: 20px 0 20px 0;
       border-bottom: 1px dashed lightgray;
-      .max_amount_view{
+      .max_amount_view {
         height: 25px;
         float: left;
         border-width: 1px;
@@ -23,7 +23,7 @@
         padding-left: 5px;
         border-radius: 3px 0 0 3px;
       }
-      .text-content{
+      .text-content {
         display: block;
         width: 40%;
         text-align: right;
@@ -60,6 +60,17 @@
       }
       #order-search {
         margin-left: 5px;
+      }
+      #order_states {
+        height: 30px;
+        line-height: 25px;
+        width:auto;
+        padding: 0 5%;
+        margin: 0;
+
+        option {
+          text-align: center;
+        }
       }
     }
     .cost_type_list {
@@ -102,14 +113,14 @@
         }
       }
     }
-    #order_list{
-      .search_text_div_model{
+    #order_list {
+      .search_text_div_model {
         padding: 15px;
         background: #ffffff;
         display: inline-block;
         line-height: 25px;
         float: left;
-        .text-content-model{
+        .text-content-model {
           float: left;
         }
         input.search_text_model {
@@ -133,7 +144,7 @@
           border: 1px solid #cccccc;
           width: 40px;
         }
-        input.date_time{
+        input.date_time {
           height: 25px;
           float: left;
           border-width: 1px;
@@ -145,10 +156,10 @@
           background-color: #f3f3f3;
         }
       }
-      #order-search-content{
+      #order-search-content {
         margin-top: 10px;
       }
-      .page-action{
+      .page-action {
         margin-top: 10px;
       }
     }
@@ -234,7 +245,7 @@
     width: 20px;
     height: 20px;
   }
-  span.over{
+  span.over {
     color: red;
     font-weight: bold;
   }
@@ -245,11 +256,11 @@
     margin-right: 10px;
   }
   .company-manger-tree {
-      ul {
-        list-style: none;
-        li {
-          padding: 5px 0;
-        }
+    ul {
+      list-style: none;
+      li {
+        padding: 5px 0;
+      }
     }
   }
 }
