--- a/public/css/tripRecord/bxManger.less
+++ b/public/css/tripRecord/bxManger.less
@@ -65,9 +65,9 @@
         height: 30px;
         line-height: 25px;
         width:auto;
-        padding: 0 5%;
+        padding: 0 2%;
         margin: 0;
-
+        border-radius: 4px;
         option {
           text-align: center;
         }
@@ -262,5 +262,25 @@
         padding: 5px 0;
       }
     }
+  }
+  .order-status-manger-tree {
+      padding: 10px;
+      ul.order-status-manger-model {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        li {
+          position: relative;
+          padding: 8px;
+          background: #eeeeee;
+          border-radius: 3px;
+          margin-bottom: 10px;
+        }
+        li:hover {
+          cursor: pointer;
+          background: lightblue;
+          color: white;
+        }
+      }
   }
 }
