--- a/views/mnueManger.html
+++ b/views/mnueManger.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/public/vendors/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/public/vendors/nprogress/nprogress.css">
     <link rel="stylesheet" href="/public/css/admin.css">
+    <link rel="stylesheet" href="/public/css/load/load.css">
     <link rel="stylesheet" href="/public/css/mnueManger/mnueManger.css">
     <script src="/public/vendors/nprogress/nprogress.js"></script>
 </head>
@@ -91,6 +92,9 @@
     </div>
     <ul class="nav">
     </ul>
+</div>
+<div class="mask">
+    <span class="glyphicon glyphicon-refresh loading"></span>
 </div>
 <!-- Modal -->
 <div class="modal fade mnue-manger-tree" id="mnue_tree" tabindex="-1">
