--- a/views/mnueManger.html
+++ b/views/mnueManger.html
@@ -93,7 +93,7 @@
     <ul class="nav">
     </ul>
 </div>
-<div class="mask">
+<div class="mask" style="display: none">
     <span class="glyphicon glyphicon-refresh loading"></span>
 </div>
 <!-- Modal -->
