--- a/public/css/tripRecord/bxChart.less
+++ b/public/css/tripRecord/bxChart.less
@@ -2,5 +2,13 @@
   #company_statistical{
     width: 50%;
     height: 300px;
+    float: left;
+    border: 1px dashed lightgray;
+  }
+  #cost_statistical{
+    width: 50%;
+    height: 300px;
+    float: left;
+    border: 1px dashed lightgray;
   }
 }
