--- a/views/bxChart.html
+++ b/views/bxChart.html
@@ -25,6 +25,7 @@
     </nav>
     <div class="container-fluid">
       <div id="company_statistical"></div>
+      <div id="cost_statistical"></div>
     </div>
   </div>
 
