--- a/views/bxChart.html
+++ b/views/bxChart.html
@@ -24,8 +24,10 @@
       </ul>
     </nav>
     <div class="container-fluid">
-      <div id="company_statistical"></div>
+      <div id="address_statistical"></div>
       <div id="cost_statistical"></div>
+      <div id="bx_statistical"></div>
+      <div id="company_statistical"></div>
     </div>
   </div>
 
