--- a/public/css/tripRecord/bxChart.less
+++ b/public/css/tripRecord/bxChart.less
@@ -1,14 +1,34 @@
 .bx_chart{
-  #company_statistical{
+  #address_statistical{
     width: 50%;
     height: 300px;
     float: left;
     border: 1px dashed lightgray;
+    border-top: none;
+    border-left:none;
   }
   #cost_statistical{
     width: 50%;
     height: 300px;
     float: left;
     border: 1px dashed lightgray;
+    border-top: none;
+    border-right: none;
+  }
+  #bx_statistical{
+    width: 50%;
+    height: 300px;
+    float: left;
+    border: 1px dashed lightgray;
+    border-bottom: none;
+    border-left: none;
+  }
+  #company_statistical{
+    width: 50%;
+    height: 300px;
+    float: left;
+    border: 1px dashed lightgray;
+    border-bottom: none;
+    border-right: none;
   }
 }
