--- a/views/businessTrip.html
+++ b/views/businessTrip.html
@@ -16,7 +16,7 @@
 
 <body>
 <script>NProgress.start()</script>
-<script type="text/html" id="template">{{dataJsonArr}}</script>
+<script type="text/html" id="template">{{dataJson}}</script>
 <div class="posts main">
     <nav class="navbar">
         <button class="btn btn-default navbar-btn fa fa-bars"></button>
