--- a/views/costMaintenance.html
+++ b/views/costMaintenance.html
@@ -129,7 +129,7 @@
     <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="/public/vendors/util/utils.js"></script>
     <script src="/public/js/bussnessTrip/CostMaintenance.js"></script>
-    <script type="text/javascript" id="template">{{dataJsonArr}}</script>
+    <script type="text/javascript" id="template">{{dataJson}}</script>
     <script type="text/art-template" id="costsList">
         <% if(costTypeJsonArray) {%>
             <% for(var i = 0;i<costTypeJsonArray.length ;i++){ %>
