--- a/views/addressManger.html
+++ b/views/addressManger.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <script>NProgress.start()</script>
-<script type="text/javascript" id="template">{{dataJsonArr}}</script>
+<script type="text/javascript" id="template">{{dataJson}}</script>
 <div class="address-manger main">
     <nav class="navbar">
         <button class="btn btn-default navbar-btn fa fa-bars"></button>
