--- a/views/cisApproval.html
+++ b/views/cisApproval.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <script>NProgress.start()</script>
-<script type="text/javascript" id="template">{{dataJsonArr}}</script>
+<script type="text/javascript" id="template">{{dataJson}}</script>
 <div class="posts main">
     <nav class="navbar">
         <button class="btn btn-default navbar-btn fa fa-bars"></button>
