--- a/views/companyMaintenance.html
+++ b/views/companyMaintenance.html
@@ -119,7 +119,7 @@
     <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="/public/vendors/util/utils.js"></script>
     <script src="/public/js/bussnessTrip/companyMaintenance.js"></script>
-    <script type="text/javascript" id="template">{{dataJsonArr}}</script>
+    <script type="text/javascript" id="template">{{dataJson}}</script>
     <script type="text/javascript" id="template_url">{{url}}</script>
     <script type="text/art-template" id="costsList">
         <% if(costTypeJsonArray) {%>
