--- a/views/bxManger.html
+++ b/views/bxManger.html
@@ -114,7 +114,7 @@
         <ul class="nav">
         </ul>
     </div>
-    <div class="mask">
+    <div class="mask" style="display: none">
         <span class="glyphicon glyphicon-refresh loading"></span>
     </div>
     <div class="modal fade order-manger-tree" id="order_tree" tabindex="-1">
