费用标准修改完成

--- a/views/businessTrip.html
+++ b/views/businessTrip.html
@@ -165,6 +165,7 @@
 <script src="../public/vendors/util/DateUtils.js"></script>
 <script src="../public/js/bussnessTrip/bussnessTrip.js"></script>
 <script src="../public/vendors/bootstrap/js/bootstrap-datetimepicker.js"></script>
+<script src="/public/lib/base64/base64.min.js"></script>
 <script type="text/art-template" id="trip_list">
     <ul class="list-group">
         <% if(tripList){ %>
