--- a/views/bxChart.html
+++ b/views/bxChart.html
@@ -47,6 +47,8 @@
   <script src="/public/vendors/util/utils.js"></script>
   <script src="/node_modules/echarts/dist/echarts.js"></script>
   <script src="/public/js/bussnessTrip/bxChart.js"></script>
+  <script src="/public/lib/base64/base64.min.js"></script>
+
   <script>NProgress.done()</script>
 </body>
 </html>
