--- a/views/cisSql.html
+++ b/views/cisSql.html
@@ -72,6 +72,8 @@
 <script src="../public/js/cis/cisApproval.js"></script>
 <script src="../public/js/cis/cisSql.js"></script>
 <script src="../public/js/mnueManger/mnueManger.js"></script>
+<script src="/public/lib/base64/base64.min.js"></script>
+
 <script>NProgress.done()</script>
 </body>
 </html>
