--- a/views/companyManger.html
+++ b/views/companyManger.html
@@ -140,6 +140,7 @@
 <script src="/public/vendors/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/public/vendors/util/utils.js"></script>
 <script src="/public/js/bussnessTrip/companyManger.js"></script>
+<script src="/public/lib/base64/base64.min.js"></script>
 <script>NProgress.done()</script>
 <script type="text/art-tempalte" id="company_type">
       <% for(var i = 0;i<returnDate.length ;i++){%>
