--- a/views/costMaintenance.html
+++ b/views/costMaintenance.html
@@ -105,7 +105,7 @@
         <ul class="nav">
         </ul>
     </div>
-    <div class="mask">
+    <div class="mask" style="display: none">
         <span class="glyphicon glyphicon-refresh loading"></span>
     </div>
     <!-- Modal -->
@@ -129,6 +129,7 @@
     <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="/public/vendors/util/utils.js"></script>
     <script src="/public/js/bussnessTrip/CostMaintenance.js"></script>
+    <script src="/public/lib/base64/base64.min.js"></script>
     <script type="text/javascript" id="template">{{dataJson}}</script>
     <script type="text/art-template" id="costsList">
         <% if(costTypeJsonArray) {%>
