--- a/views/addressManger.html
+++ b/views/addressManger.html
@@ -115,6 +115,8 @@
 <script src="/public/vendors/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/public/vendors/util/utils.js"></script>
 <script src="/public/js/bussnessTrip/addressManger.js"></script>
+<script src="/public/lib/base64/base64.min.js"></script>
+
 <script>NProgress.done()</script>
 </body>
 </html>
