--- a/views/bxManger.html
+++ b/views/bxManger.html
@@ -189,6 +189,7 @@
     <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="/public/vendors/util/utils.js"></script>
     <script src="/public/js/bussnessTrip/bxManger.js"></script>
+    <script src="/public/lib/base64/base64.min.js"></script>
     <script type="text/javascript" id="template">{{dataJson}}</script>
     <script type="text/art-template" id="ordersList">
         <% if(ordersJsonArray) { %>
