--- a/views/cisApproval.html
+++ b/views/cisApproval.html
@@ -74,8 +74,9 @@
 <script src="../node_modules/art-template/lib/template-web.js"></script>
 <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
 <script src="../public/vendors/util/utils.js"></script>
-<script src="../public/js/cis/cisApproval.js"></script>
 <script src="../public/js/mnueManger/mnueManger.js"></script>
+<script src="../public/js/cis/cisApproval.js"></script>
+<script src="/public/lib/base64/base64.min.js"></script>
 <script>NProgress.done()</script>
 </body>
 </html>
