--- a/views/costType.html
+++ b/views/costType.html
@@ -156,6 +156,7 @@
     <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="/public/vendors/util/utils.js"></script>
     <script src="/public/js/bussnessTrip/CostType.js"></script>
+    <script src="/public/lib/base64/base64.min.js"></script>
     <script type="text/javascript" id="template">{{dataJson}}</script>
     <script type="text/art-template" id="costsList">
         <% if(costTypeJsonArray) {%>
