--- a/views/index.html
+++ b/views/index.html
@@ -57,6 +57,7 @@
   <script src="/public/vendors/jquery/jquery.js"></script>
   <script src="/public/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="/public/vendors/util/utils.js"></script>
+  <script src="/public/lib/base64/base64.min.js"></script>
   <script>NProgress.done()</script>
 <script>
   $(function () {
