--- a/views/personMaintenance.html
+++ b/views/personMaintenance.html
@@ -130,6 +130,7 @@
     <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="/public/vendors/util/utils.js"></script>
     <script src="/public/js/bussnessTrip/personMaintenance.js"></script>
+    <script src="/public/lib/base64/base64.min.js"></script>
     <script type="text/javascript" id="template">{{dataJson}}</script>
     <script type="text/art-template" id="typeList">
         <% if(returnData){ %>
