--- a/views/index.html
+++ b/views/index.html
@@ -61,15 +61,9 @@
   <script>NProgress.done()</script>
 <script>
   $(function () {
-    var data = $("#template").html().replace(/&#34;/g,'"');
-    var dataJson = JSON.parse(data);
-    var rootNode = $('.aside .nav');
-    $('.avatar').prop('src',dataJson.user.avatar);
-    $('.name').html(dataJson.user.nickname);
-    for(var i = 0;i<dataJson.dataJsonArr.length;i++){
-        //循环遍历集合元素,添加菜单目录。
-        utils.addMnues(rootNode,dataJson.dataJsonArr[i]);
-    }
+    utils.renderPage(function () {
+        
+    })
   });
 </script>
 </body>
