--- a/views/menuPermissionMaintenance.html
+++ b/views/menuPermissionMaintenance.html
@@ -31,7 +31,7 @@
             </ul>
             <div class="tab-content mnue-permission-content">
                 <div class="active" id="mnue_permission_list">
-                    <div class="page-action">
+                    <div class="page-action" style="margin-top: 10px">
                         <ul class="pagination pagination-sm pull-right pages-nav">
                         </ul>
                     </div>
