--- a/public/css/mnuePermissionMaintenance/mnuePermissionMaintenance.less
+++ b/public/css/mnuePermissionMaintenance/mnuePermissionMaintenance.less
@@ -4,7 +4,7 @@
       width: 100%;
       max-width: 100%;
       margin-bottom: 20px;
-      thead{
+      thead {
         tr {
           th {
             text-align: center;
@@ -19,8 +19,72 @@
         tr:nth-child(even) {
           background-color: #ffffff;
         }
+        tr {
+          td {
+            text-align: center;
+          }
+        }
+      }
+
+    }
+  }
+  #mnue_permission_add {
+    #mnue-permission-maintenance {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+    .mnue_content {
+      background: #ffffff;
+      .search_text_div_model {
+        padding: 15px;
+        display: inline-block;
+        line-height: 25px;
+        float: left;
+        .text-content-model {
+          float: left;
+        }
+        input {
+          height: 25px;
+          float: left;
+          border-width: 1px;
+          border-style: solid;
+          border-color: #cccccc;
+          font-size: 12px;
+          padding-left: 5px;
+          border-radius: 3px;
+        }
+        button {
+          height: 25px;
+          float: left;
+          top: 0px;
+          background-color: #fff;
+          padding: 0;
+          border: 1px solid #cccccc;
+          width: 40px;
+        }
+      }
+    }
+    table{
+      thead{
         tr{
-          td{
+          th{
+            text-align: center;
+            font-weight: bold;
+          }
+        }
+      }
+      tbody{
+        tr {
+          td {
+            a {
+              margin-left: 5px;
+            }
+            input[type='checkbox']{
+              margin-right: 5px;
+              text-align: center;
+            }
+          }
+          td.check_td{
             text-align: center;
           }
         }
